# zettelkasten

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
k8s/: service.yaml  statefulset.yaml
serverless/: lambda_function.py
tests/: test_async.py  test_contrib.py  test_core.py  test_replication.py  test_sqlite.py  test_web.py
zettelkasten/: __init__.py  async_db.py  cli.py  client.py  core.py  exceptions.py  replication.py  server.py  web.py
zettelkasten/backends/: base.py  json_file.py  memory.py  network.py  sqlite.py
zettelkasten/contrib/: django.py  fastapi.py  flask.py
zettelkasten/platform/: __init__.py  base.py  unix.py  windows.py
